@@ -1,3 +1,9 @@
+2007-12-04  Benjamin Berg  <benjamin@sipsolutions.net>
+
+	* engines/hc/src/hc-style.c: (hc_draw_shadow),
+	(hc_draw_shadow_gap), (hc_draw_extension):
+	Fix some outline drawings. Fixes bug #486418 at least partially.
+
 2007-12-02  Benjamin Berg  <benjamin@sipsolutions.net>
 
 	* engines/hc/src/hc_gtk2_support.c: (hc_simple_border_gap_clip),
